--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,44 +1,63 @@
 /* ==== Google font ==== */
 @import url('http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic|Montserrat:700|Merriweather:400italic');
-
 @import url('https://fonts.googleapis.com/css?family=Lobster|Paytone+One|Prompt|Roboto');
 
+
+/* ==== Generale ==== */
+*{
+    box-sizing: border-box;
+    transition-duration: 0.3s;
+}
 
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Roboto',sans-serif;
-	  font-weight: 300;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2rem;
     color: #666;
     background-color: #fff;
 }
 
-html {
-    width: 100%;
-    height: 100%;
-}
-
+/* ==== titre ==== */
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 30px;
-    font-family: 'Prompt',sans-serif;
-    font-weight: 700;
-    letter-spacing: 1px;
+    margin: 2rem 2rem 1.875rem;
+}
+
+h1{
+    font-size: 4rem;
+}
+h2 {
+    font-size: 2.5rem;
+    color: white;
+}
+h3 {
+    font-size: 3rem;
+}
+h4 {
+    font-size: 1.5rem;
+    color: white;
+}
+h5{
+    font-size: 1.5rem;
+    color: #363333;
+
+}
+h6 {
+    font-size: 1.5rem;
 }
 
 p {
-    margin: 0 0 20px;
-    font-size: 16px;
-    line-height: 1.6em;
+    margin: 0 0 1.25rem;
+    font-size: 1rem;
 }
 
-
 a {
-    color: #28c3ab;
+    color: #E16428;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -47,113 +66,175 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #176e61;
+    color: #E16428;
+}
+
+/* ==========================
+Logo
+============================= */
+
+body nav .brand-logo{
+    font-size: 1.5rem;
+    font-family: Prompt;
+    line-height: normal;
+    margin-top: 1rem;
+}
+
+/* ==========================
+Nav
+============================= */
+
+.nav-wrapper{
+    background-color: black;
 }
 
 
-/* loader */
-#preloader {
-    background: #ffffff;
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 100%;
-    z-index: 999;
+/* ==========================
+Intro
+============================= */
+
+body .intro{
+    background-image: url(../img/developpeur-catherine.jpg);
+    background-position: center;
+    background-size: cover;
+    padding-top: 32px;
+    padding-bottom: 150px;
+    filter: opacity(1);
 }
 
-
-#loaderInner {
-    background:#ffffff url(../img/spinner.gif) center center no-repeat;
-    height: 60px;
-    left: 50%;
-    margin: -50px 0 0 -50px;
-    position: absolute;
-    top: 50%;
-    width: 60px;
+.intro .page-scroll, footer .page-scroll, .share{
+    display: flex;
+    justify-content: space-around;
 }
-
-@keyframes boxSpin{
-  0%{
-    transform: translate(-10px, 0px);
-  }
-  25%{
-    transform: translate(10px, 10px);
-  }
-  50%{
-    transform: translate(10px, -10px);
-  }
-  75%{
-    transform: translate(-10px, -10px);
-  }
-  100%{
-    transform: translate(-10px, 10px);
-  }
+.page-scroll .fa-angle-double-down, .page-scroll #totop  {
+    color: #e65100;
 }
-
-
-@keyframes shadowSpin{
-  0%{
-    box-shadow: 10px -10px #39CCCC, -10px 10px #FFDC00;
-  }
-  25%{
-    box-shadow: 10px 10px #39CCCC, -10px -10px #FFDC00;
-  }
-  50%{
-    box-shadow: -10px 10px #39CCCC, 10px -10px #FFDC00;
-  }
-  75%{
-    box-shadow: -10px -10px #39CCCC, 10px 10px #FFDC00;
-  }
-  100%{
-    box-shadow: 10px -10px #39CCCC, -10px 10px #FFDC00;
-  }
-}
-
-#load {
-	z-index: 9999;
-  background-color: #FF4136;
-  opacity: 0.75;
-  width: 10px;
-  height: 10px;
-  position: absolute;
-  top: 50%;
-  margin: -5px auto 0 auto;
-  left: 0;
-  right: 0;
-  border-radius: 0px;
-  border: 5px solid #FF4136;
-  box-shadow: 10px 0px #39CCCC, 10px 0px #01FF70;
-  animation: shadowSpin 1s ease-in-out infinite;
-}
-
-/* margins */
-.marginbot-0{margin-bottom:0 !important;}
-.marginbot-10{margin-bottom:10px !important;}
-.marginbot-20{margin-bottom:20px !important;}
-.marginbot-30{margin-bottom:30px !important;}
-.marginbot-40{margin-bottom:40px !important;}
-.marginbot-50{margin-bottom:50px !important;}
-
 
 /* ==========================
 Formation
 ============================= */
 
+.formation h2{
+    color: #e65100;
+}
+.formation {
+    color: white;
+}
+
+#formation{
+    width: 50%;
+    height: 50%;
+    background-color: #363333;
+    -webkit-box-shadow: 0px 0px 38px 0px rgba(43,40,37,1);
+    -moz-box-shadow: 0px 0px 38px 0px rgba(43,40,37,1);
+    box-shadow: 0px 0px 38px 0px rgba(43,40,37,1);
+}
+
+.block-formation{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+/* ==========================
+experience
+============================= */
+
+.experience h2{
+    color: #e65100;
+}
+
+.collapsible-header{
+    font-size: 1.5rem;
+}
+
 /* ==========================
 compétences
 ============================= */
+.competence h2{
+    color: #e65100;
+}
+
+.inner{
+    margin-left: 2rem;
+}
+
+.competence h5{
+    display: flex;
+    justify-content: center;
+}
 
 /* ==========================
 loisirs
 ============================= */
 
+.loisirs h2{
+    color: #e65100;
+}
+
+.detail-loisirs p{
+    margin: 2rem 2rem 1.875rem;
+}
+
 /* ==========================
 portfolio
 ============================= */
 
+.portfolio h2{
+    color: #e65100;
+}
+
 /* ==========================
 Contact
 ============================= */
+.formulaire{
+    margin-top: 150px;
+}
+
+.formulaire h2{
+    color: black;
+}
+
+/* ==========================
+Footer
+============================= */
+.page-footer{
+    background-color: black;
+}
+
+.container p, h5, .grey-text{
+    display: flex;
+    justify-content: space-around;
+}
+
+.grey-text{
+    margin-bottom: 15px;
+}
+
+
+.share{
+    font-size: 1.2rem;
+}
+
+.page-scroll #totop, .page-scroll .btn-circle  {
+    background-color: black;
+    border-radius: 5px;
+}
+
+/* ==========================
+Tablette
+============================= */
+
+@media screen and (min-width:768px) {
+  header{
+
+  }
+
+  /* ==========================
+  Desktop
+  ============================= */
+
+@media screen and (min-width:940px) {
+    header{
+
+    }
